--- a/SDS-Demo-AzureWebApp/Views/Home/Index.cshtml
+++ b/SDS-Demo-AzureWebApp/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>This is Smooth Dev Saturday.</p>
+    <p>This is Smooth Dev from Deployment Slot.</p>
 </div>
